--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,13 +15,14 @@
 </head>
 <body>
 <h1>Register</h1>
-<form th:action="@{/register}" method="post">
-    Username: <input type="text" name="username" required><br>
-    First Name: <input type="text" name="name" required><br>
-    Last Name: <input type="text" name="surname" required><br>
-    Password: <input type="password" name="password" required><br>
-    <input type="submit" value="Register">
+<form action="/v1/register" method="post">
+    <input type="text" name="username" placeholder="Enter your username" required>
+    <input type="text" name="firstName" placeholder="Enter your first name" required>
+    <input type="text" name="lastName" placeholder="Enter your last name" required>
+    <input type="password" name="password" placeholder="Enter your password" required>
+    <button type="submit">Register</button>
 </form>
-<a th:href="@{/login}">Already registered? Login here.</a>
+
+<a th:href="@{/v1/login}">Already registered? Login here.</a>
 </body>
 </html>
